--- a/packages/rocketchat_theme/client/imports/general/rtl.css
+++ b/packages/rocketchat_theme/client/imports/general/rtl.css
@@ -494,7 +494,6 @@
 
 		& .unread-burger-alert {
 			right: auto;
-			left: 4px;
 		}
 
 		&.menu-opened i {
